# ray-tracer-challenge

./: Cargo.toml  output.ppm
src/: body.rs  canvas.rs  fuzzy_eq.rs  intersections.rs  lib.rs  light.rs  material.rs  matrix.rs  ray.rs  sphere.rs  tuple.rs  util.rs
src/canvas/: to_png.rs  to_ppm.rs  to_rgba32.rs
