[package]
name = "ray-tracer-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
png = "0.17.2"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "run-for-all", "run-cargo-test", "run-cargo-clippy"]